feat: support wechat scan for member card binding
